# poco-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.sh
src/: http-server.cpp  logging.cpp
